tests/compile_fail/key_type_not_sync.stderr
error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> tests/compile_fail/key_type_not_sync.rs:5:5
  |
5 |     #[memoized(key_expr = input)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<()>`
note: required by a bound in `obtain_immutable_cache`
 --> tests/compile_fail/key_type_not_sync.rs:5:5
  |
5 |     #[memoized(key_expr = input)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `obtain_immutable_cache`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
